rholang/src/main/tree_sitter/test/corpus/attenuation.txt
===========
Attenuation
===========

new MakeGetForwarder in {
  contract MakeGetForwarder(target, ret) = {
    new port in {
      ret!(*port) |
      contract port(@method, @arg, ack) = {
        match method == "get" { true => target!("get", arg, *ack) }
      }
    }
  }
}

---

(source_file
  (new
    decls: (decls
      (name_decl
        (var)))
    proc: (block
      body: (contract
        name: (var)
        formals: (names
          (var)
          (var))
        proc: (block
          body: (new
            decls: (decls
              (name_decl
                (var)))
            proc: (block
              body: (par
                left: (send
                  name: (var)
                  send_type: (send_single)
                  inputs: (inputs
                    (eval
                      (var))))
                right: (contract
                  name: (var)
                  formals: (names
                    (quote
                      (var))
                    (quote
                      (var))
                    (var))
                  proc: (block
                    body: (match
                      expression: (eq
                        left: (var)
                        right: (string_literal))
                      cases: (cases
                        (case
                          pattern: (bool_literal)
                          proc: (send
                            name: (var)
                            send_type: (send_single)
                            inputs: (inputs
                              (string_literal)
                              (var)
                              (eval
                                (var)))))))))))))))))
