rholang/src/main/tree_sitter/test/corpus/dining_philosophers.txt
===================
Dining philosophers
===================

new philosopher1, philosopher2, north, south, knife, spoon in {
    north!(*knife) |
    south!(*spoon) |
    for (@knf <- north; @spn <- south) {
      philosopher1!("Complete!") |
      north!(knf) |
      south!(spn)
    } |
    for (@spn <- south; @knf <- north) {
      philosopher2!("Complete!") |
      north!(knf) |
      south!(spn)
    }
}

---

(source_file
  (new
    decls: (decls
      (name_decl
        (var))
      (name_decl
        (var))
      (name_decl
        (var))
      (name_decl
        (var))
      (name_decl
        (var))
      (name_decl
        (var)))
    proc: (block
      body: (par
        left: (par
          left: (par
            left: (send
              name: (var)
              send_type: (send_single)
              inputs: (inputs
                (eval
                  (var))))
            right: (send
              name: (var)
              send_type: (send_single)
              inputs: (inputs
                (eval
                  (var)))))
          right: (input
            formals: (receipts
              (linear_bind
                names: (names
                  (quote
                    (var)))
                input: (simple_source
                  (var)))
              (linear_bind
                names: (names
                  (quote
                    (var)))
                input: (simple_source
                  (var))))
            proc: (block
              body: (par
                left: (par
                  left: (send
                    name: (var)
                    send_type: (send_single)
                    inputs: (inputs
                      (string_literal)))
                  right: (send
                    name: (var)
                    send_type: (send_single)
                    inputs: (inputs
                      (var))))
                right: (send
                  name: (var)
                  send_type: (send_single)
                  inputs: (inputs
                    (var)))))))
        right: (input
          formals: (receipts
            (linear_bind
              names: (names
                (quote
                  (var)))
              input: (simple_source
                (var)))
            (linear_bind
              names: (names
                (quote
                  (var)))
              input: (simple_source
                (var))))
          proc: (block
            body: (par
              left: (par
                left: (send
                  name: (var)
                  send_type: (send_single)
                  inputs: (inputs
                    (string_literal)))
                right: (send
                  name: (var)
                  send_type: (send_single)
                  inputs: (inputs
                    (var))))
              right: (send
                name: (var)
                send_type: (send_single)
                inputs: (inputs
                  (var))))))))))
