rholang/src/main/tree_sitter/test/corpus/hashing.txt
========
Hashing
========

new x, y, stdout(`rho:io:stdout`) in {
    x!(@"name"!("Joe") | @"age"!(40)) | // (1)
    for (@r <- x) { @"keccak256Hash"!(r.toByteArray(), *y) } |
    // hash the program from (1)
    for (@h <- y) { stdout!(h) } // print out the keccak256 hash
}

---

(source_file
  (new
    decls: (decls
      (name_decl
        (var))
      (name_decl
        (var))
      (name_decl
        (var)
        uri: (uri_literal)))
    proc: (block
      body: (par
        left: (par
          left: (send
            name: (var)
            send_type: (send_single)
            inputs: (inputs
              (par
                left: (send
                  name: (quote
                    (string_literal))
                  send_type: (send_single)
                  inputs: (inputs
                    (string_literal)))
                right: (send
                  name: (quote
                    (string_literal))
                  send_type: (send_single)
                  inputs: (inputs
                    (long_literal))))))
          right: (input
            formals: (receipts
              (linear_bind
                names: (names
                  (quote
                    (var)))
                input: (simple_source
                  (var))))
            proc: (block
              body: (send
                name: (quote
                  (string_literal))
                send_type: (send_single)
                inputs: (inputs
                  (method
                    receiver: (var)
                    name: (var)
                    args: (args))
                  (eval
                    (var)))))))
        right: (input
          formals: (receipts
            (linear_bind
              names: (names
                (quote
                  (var)))
              input: (simple_source
                (var))))
          proc: (block
            body: (send
              name: (var)
              send_type: (send_single)
              inputs: (inputs
                (var)))))))))
