rholang/src/main/tree_sitter/test/corpus/map.txt
====
Map
====

new map, stdout(`rho:io:stdout`) in {
   map!({}) |

   for(@m <- map) {
     map!(m.set("key1", "value1")) |
     stdout!("Inserted 'key1' with 'value1' into the map.")
   } |

   for(m <- map) {
     new lookupResponse in {
       m!("get", "key1", *lookupResponse) |
       for(@value <- lookupResponse) {
         stdout!(value)
       }
     }
   } |

   for(@m <- map) {
     map!(m.delete("key1")) |
     stdout!("Removed 'key1' from the map.")
   }
}

---
